# Conflux

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
Include/Conflux/: Memory.hxx  Utils.hxx
Source/: CMakeLists.txt  CRQ.hxx  Common.hxx  IntrusiveList.hxx
Source/memory/: EBR.cxx  EBR.hxx
Source/memory/detail/: CRQ.hxx
Tests/: CMakeLists.txt  EbrTest.cxx  HelloTest.cxx
cmake/: conflux-config.cmake.in
